# qpoases_embedded

./: BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  deps.bzl  package.xml  repositories.bzl
.circleci/: config.yml
include/qpoases_embedded/: Bounds.hpp  Bounds.ipp  Constants.hpp  Constraints.hpp  Constraints.ipp  Indexlist.hpp  Indexlist.ipp  MessageHandling.hpp  QProblem.hpp  QProblem.ipp  QProblemB.hpp  QProblemB.ipp  SubjectTo.hpp  SubjectTo.ipp  Types.hpp  Utils.hpp
src/: Bounds.cpp  Constraints.cpp  Indexlist.cpp  MessageHandling.cpp  QProblem.cpp  QProblemB.cpp  SubjectTo.cpp  Utils.cpp
test/: BUILD.bazel  benchmark_chain_mass_nmpc.cpp  benchmark_hanging_chain.cpp  benchmark_helpers.h  chain_mass_nmpc.py  common.py  data_generator.bzl  example1.cpp  example1b.cpp  generate_python_requirements.sh  hanging_chain.py  qp_test_data.h  requirements_lock.txt  test_chain_mass_nmpc.cpp  test_example1.cpp  test_example1b.cpp  test_hanging_chain.cpp  test_helpers.h  test_main.cpp
