<?xml version="1.0"?>
<package format="2">
  <name>qpoases_embedded</name>
  <version>2.0.0</version>
  <description>qpOASES embedded</description>

  <maintainer email="milan@example.com">Milan Vukov</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
